Leaderboard database added #25 improved